update to go 1.23.0 rebuild api
